--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
-  <h1>Hello</h1>
-  <a href="/login/facebook">Facebook</a>
-</body>
-</html>
+<h1>Hello, World!</h1>
+
+<a href="/login">Login</a>
+<a href="/signup">Signup</a>
