--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -23,10 +23,6 @@
     <!-- Alicia's custom CSS-->
     <link href="/css/custom.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -84,10 +80,10 @@
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-      <script src="bootstrap/js/bootstrap.min.js"></script>
+      <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
       <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-      <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-      <script src="/flat-ui/dist/js/flat-ui.min.js"></script>
+      <script src="/vendor/js/ie10-viewport-bug-workaround.js"></script>
+      <script src="/vendor/flat-ui/dist/js/flat-ui.min.js"></script>
       <script>
         $(function () {
           $('[data-toggle="tooltip"]').tooltip()
