--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -25,6 +25,7 @@ img {
 
 .edit_profile-pic {
 	display: block;
+	font-size: 14px;
 }
 
 .profile-pic {
@@ -54,6 +55,17 @@ img {
 	}
 }
 
+.basics > div {
+	padding-left: 0;
+	padding-right: 0;
+}
+.profile input {
+	font-size: 14px;
+}
+
+.dob, .gender {
+	margin-bottom: 2rem;
+}
 .page-header {
 	margin-bottom: 10px;
 	vertical-align: middle;
@@ -81,16 +93,30 @@ img {
 
 .group-title {
 	display: block;
+	font-weight: bold;
 }
 
 .toppings-love .checkbox, .crust-prefs .radio {
-	width: 33%;
 	display: inline-block;
+	width: 33%;
 }
 
+@media (max-width:900px) {
+	.toppings-love .checkbox, .crust-prefs .radio {
+	width: 49%;
+	}
+}
+
+#hates {
+	width: 90%;
+}
+
+.toppings-hate {
+	margin-top: 3rem;
+}
 .notes textarea {
-	width: 50%;
-	height: 200px;
+	width: 100%;
+	height: 100px;
 }
 
 h3 {
@@ -99,4 +125,9 @@ h3 {
 
 h3:first-of-type {
 	margin-top: 40px;
+}
+
+.submit-div {
+	margin-top: 3rem;
+	margin-bottom: 6rem;
 }
