--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -10,7 +10,7 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>My Pizza Profile | Pizzafy</title>
-
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
