Add landing page and signup

--- a/views/layouts/index-home-backup.hbs
+++ b/views/layouts/index-home-backup.hbs
@@ -46,7 +46,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/login" data-toggle="modal" data-target="#login">Login</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#login">Login</a></li>
              <li><a href="http://twitter.com/pizzafy"><span class="fui-twitter"></span></a></li>
           </ul>
         </div>
@@ -71,7 +71,9 @@
     </div> -->
     <div class="centered">
     	<div class="wrap">
-    	{{{body}}}
+    	<h1>Experience the crowdsourced pizza party.</h1>
+    	<h4>Your slices. Your toppings. Your pizza.</h4>
+    	{{> socialSignUp}}
     	</div>
     </div>
 </div> <!-- wrapper -->
