--- a/views/socialLogIn.hbs
+++ b/views/socialLogIn.hbs
@@ -13,12 +13,7 @@
               <label class="login-field-icon fui-lock" for="login-pass"></label>
             </div>
 
-            <div class="form-group">
-              <input type="password" class="form-control login-field" value="" placeholder="Confirm your password" id="login-pass" />
-              <label class="login-field-icon fui-lock" for="login-pass"></label>
-            </div>
-
-             <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Sign up</button>
+             <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Log in</button>
           </div>
         </div>
 </div>
