--- a/views/socialLogIn.hbs
+++ b/views/socialLogIn.hbs
@@ -1,8 +1,10 @@
 <div class="login-form">
-<a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a>
-<a href="/auth/facebook" class="btn btn-block btn-lg btn-primary">Join With Facebook</a>
+<div class="social-buttons">
+<a href="/auth/twitter" class="btn btn-block btn-lg btn-info social-btn btn-twitter">Sign in with Twitter</a>
+<a href="/auth/facebook" class="btn btn-block btn-lg btn-primary social-btn btn-facebook">Sign in with Facebook</a>
+</div>
 
- <div class="login-form">
+<div class="login-container">
             <div class="form-group">
               <input type="text" class="form-control login-field" value="" placeholder="Enter your name" id="login-name" />
               <label class="login-field-icon fui-user" for="login-name"></label>
@@ -13,10 +15,7 @@
               <label class="login-field-icon fui-lock" for="login-pass"></label>
             </div>
 
-             <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Log in</button>
-          </div>
-        </div>
+             <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Sign in</button>
 </div>
-
-
+</div>
 
