--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -42,11 +42,11 @@
             <span class="icon-bar"></span>
           </button>
           <!-- need to replace logo here -->
-          <a class="navbar-brand" href="#"><img src="/images/pizzafylogo-white.svg" alt="Pizzafy.me"/ ><h1>Pizzafy</h1></a>
+          <a class="navbar-brand" href="/"><img src="/images/pizzafylogo-white.svg" alt="Pizzafy.me"/ ><h1>Pizzafy</h1></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/login" data-toggle="modal" data-target="#login">Login</a></li>
+            <li><a href="/login">Login</a></li>
              <li><a href="http://twitter.com/pizzafy"><span class="fui-twitter"></span></a></li>
           </ul>
         </div>
