--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -50,7 +50,7 @@
             <!-- <li><a href="#">Settings</a></li>-->
             <!-- Need modal here -->
             <!--<li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li> -->
-            <li><a href="#">Log Out</a></li>
+            <li><a href="/logout">Log Out</a></li>
           </ul>
         </div>
       </div>
