--- a/views/partials/socialSignUp.hbs
+++ b/views/partials/socialSignUp.hbs
@@ -1,27 +1,26 @@
 <div class="login-form">
-<a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a>
-<a href="/auth/facebook" class="btn btn-block btn-lg btn-primary">Join With Facebook</a>
+  <a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a>
+  <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary">Join With Facebook</a>
 
- <div class="login-form">
-            <div class="form-group">
-              <input type="text" class="form-control login-field" value="" placeholder="Enter your name" id="login-name" />
-              <label class="login-field-icon fui-user" for="login-name"></label>
-            </div>
+  <div class="login-form">
+    <form action="/auth/local/signup" method="POST">
+      <div class="form-group">
+        <input type="text" name="email" class="form-control login-field" value="" placeholder="Enter your email" id="login-name" />
+        <label class="login-field-icon fui-user" for="login-name"></label>
+      </div>
 
-            <div class="form-group">
-              <input type="password" class="form-control login-field" value="" placeholder="Password" id="login-pass" />
-              <label class="login-field-icon fui-lock" for="login-pass"></label>
-            </div>
+      <div class="form-group">
+        <input type="password" name="password" class="form-control login-field" value="" placeholder="Password" id="login-pass" />
+        <label class="login-field-icon fui-lock" for="login-pass"></label>
+      </div>
 
-            <div class="form-group">
-              <input type="password" class="form-control login-field" value="" placeholder="Confirm your password" id="login-pass" />
-              <label class="login-field-icon fui-lock" for="login-pass"></label>
-            </div>
+      <div class="form-group">
+        <input type="password" name="passwordConfirmation" class="form-control login-field" value="" placeholder="Confirm your password" id="login-pass" />
+        <label class="login-field-icon fui-lock" for="login-pass"></label>
+      </div>
 
-             <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Sign up</button>
-          </div>
-        </div>
+      <input type="hidden" name="_csrf" value="{{_csrf}}">
+      <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Sign up</button>
+    </form>
+  </div>
 </div>
-
-
-
