--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,8 +1,8 @@
 <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 main profile">
 
   <div class="row page-header">
-    <img src="{{user.profile.picture}}" class="profile-pic" alt="{{user.profile.displayName}} | Pizzafy" />  
-    <h1 class="page-title">{{user.profile.displayName}}'s Pizza Profile</h1> 
+    <img src="/images/profilepicture.jpg" class="profile-pic" alt="{{Username}} | Pizzafy" />  
+    <h1 class="page-title">{{Name}}'s Pizza Profile</h1> 
     <!-- Not using this for now <button type="button" class="badge pizza-number" data-toggle="tooltip" data-placement="top" title="Your Pizza Number: How many slices of pizza you eat">2</button> -->
   </div>
   <a href="#" class="edit_profile-pic"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Update your profile picture</a>
@@ -17,48 +17,48 @@
     <fieldset>
       <!-- Date of birth -->
       <div class="row basics">
-        <div class="dob col-md-6">
-          <label class="group-title control-label">Date of Birth</label>
-          <div class="control-group">
-            <label class="control-label" for="month">Month</label>
-            <div class="controls">
-              <input id="month" name="month" type="text" placeholder="MM" class="input-mini">
-            </div>
-          </div> <span class="dob-spacer">/</span>
-          <div class="control-group">
-            <label class="control-label" for="day">Day</label>
-            <div class="controls">
-              <input id="day" name="day" type="text" placeholder="DD" class="input-mini">
-            </div>
-          </div><span class="dob-spacer">/</span>
-          <div class="control-group">
-            <label class="control-label" for="year">Year</label>
-            <div class="controls">
-              <input id="year" name="year" type="text" placeholder="YY" class="input-mini">
-            </div>
+      <div class="dob col-md-6">
+        <label class="group-title control-label">Date of Birth</label>
+        <div class="control-group">
+          <label class="control-label" for="month">Month</label>
+          <div class="controls">
+            <input id="month" name="month" type="text" placeholder="MM" class="input-mini">
+          </div>
+        </div> <span class="dob-spacer">/</span>
+        <div class="control-group">
+          <label class="control-label" for="day">Day</label>
+          <div class="controls">
+            <input id="day" name="day" type="text" placeholder="DD" class="input-mini">
+          </div>
+        </div><span class="dob-spacer">/</span>
+        <div class="control-group">
+          <label class="control-label" for="year">Year</label>
+          <div class="controls">
+            <input id="year" name="year" type="text" placeholder="YY" class="input-mini">
           </div>
         </div>
+      </div>
 
-        <!-- Gender -->
-        <div class="gender col-md-6">
-          <label class="group-title control-label" for="gender">Gender</label>
-          <div class="control-group">
-            <div class="controls">
-              <label class="radio" for="gender-0">
-                <input type="radio" name="gender" id="gender-0" value="Male" checked="checked">
-                Male
-              </label>
-              <label class="radio" for="gender-1">
-                <input type="radio" name="gender" id="gender-1" value="Female">
-                Female
-              </label>
-              <label class="radio" for="gender-2">
-                <input type="radio" name="gender" id="gender-2" value="Other">
-                <input id="other" name="other" type="text" placeholder="Other" class="input-xlarge">
-              </label>
-            </div>
+      <!-- Gender -->
+      <div class="gender col-md-6">
+        <label class="group-title control-label" for="gender">Gender</label>
+        <div class="control-group">
+          <div class="controls">
+            <label class="radio" for="gender-0">
+              <input type="radio" name="gender" id="gender-0" value="Male" checked="checked">
+              Male
+            </label>
+            <label class="radio" for="gender-1">
+              <input type="radio" name="gender" id="gender-1" value="Female">
+              Female
+            </label>
+            <label class="radio" for="gender-2">
+              <input type="radio" name="gender" id="gender-2" value="Other">
+              <input id="other" name="other" type="text" placeholder="Other" class="input-xlarge">
+            </label>
           </div>
         </div>
+      </div>
       </div>
       <!-- Pizza Number -->
       <h3>Pizza Number</h3>
