--- a/views/socialLogIn.hbs
+++ b/views/socialLogIn.hbs
@@ -1,22 +1,23 @@
 <div class="login-form">
-<a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a>
-<a href="/auth/facebook" class="btn btn-block btn-lg btn-primary">Join With Facebook</a>
+  <a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a>
+  <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary">Join With Facebook</a>
 
- <div class="login-form">
-            <div class="form-group">
-              <input type="text" class="form-control login-field" value="" placeholder="Enter your name" id="login-name" />
-              <label class="login-field-icon fui-user" for="login-name"></label>
-            </div>
+  <div class="login-form">
+    <form action="/auth/local/login" method="POST">
+      <div class="form-group">
+        <input type="email" name="email" class="form-control login-field" value="" placeholder="Enter your email" id="login-name" />
+        <label class="login-field-icon fui-user" for="login-name"></label>
+      </div>
 
-            <div class="form-group">
-              <input type="password" class="form-control login-field" value="" placeholder="Password" id="login-pass" />
-              <label class="login-field-icon fui-lock" for="login-pass"></label>
-            </div>
+      <div class="form-group">
+        <input type="password" name="password" class="form-control login-field" value="" placeholder="Password" id="login-pass" />
+        <label class="login-field-icon fui-lock" for="login-pass"></label>
+      </div>
 
-             <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Log in</button>
-          </div>
-        </div>
+      <input type="hidden" name="_csrf" value={{_csrf}}>
+
+      <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Log in</button>
+    </form>
+  </div>
 </div>
-
-
-
+</div>
